--- a/index.html
+++ b/index.html
@@ -13,22 +13,8 @@
 
 <body>
 <header class="vrhStrane">
-  <h1>Boba-House</h1>
+  <h1>Knjiga</h1>
 </header>
-<nav>
-  <ul class="glavnaLista">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="what.html">Razglednice</a></li>
-    <li><a href="#rezervacije">Rezervacije</a></li>
-    <li><a href="https://www.facebook.com/slobodanka.vucenovic">Facebook</a></li>
-  </ul>
-</nav>
-<section class="glava1">
-  
- </section>
- 
- <script>
-  
- </script>
+
 </body>
 </html>
