--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "sr-RS">
 <head>
-<title>Phyton request</title>
+<title>Prezentacija knjige</title>
 <meta name="author" content="Ja">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
