--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html lang = "sr-RS">
 <head>
-<title>Prezentacija knjige</title>
-<meta name="author" content="Ja">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="boba.css">
+  <meta charset="UTF-8">
+  <title>Prezentacija knjige</title>
+  <meta name="author" content="Ja">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="knjiga.js" defer></script>
+  <link rel="stylesheet" href="knjiga.css">
 <style>
   
 </style>
 </head>
 
 <body>
-<header class="vrhStrane">
-  <h1>Knjiga</h1>
-</header>
+
+  <div class="page">
+    <section class="prvi-odeljak">
+      <img class="invert" src="slike/glavnaslika.jpg" alt="leskovac-girl" width="380" height="380">
+      <div class="text">
+        <h2>Biografija</h2>
+        <p>
+        Neki textneki text,nekitext
+        Neki textneki text,nekitext
+        Neki textneki text,nekitext
+        Neki textneki text,nekitext
+        Neki textneki text,nekitext
+        Neki textneki text,nekitext
+       </p>
+     </div>
+    <article id="mojaknjiga">
+      
+      <img  src="slike/knjiga1.jpg" alt="leskovac-girl" width="300" height="300">
+      <h2>My First Book</h2>
+      <p><a href="#der">www.amazon.com</a></p>
+    </article>
+    </section>
+    
+  </div>
 
 </body>
 </html>
