--- a/index.html
+++ b/index.html
@@ -14,29 +14,38 @@
 
 <body>
 
-  <div class="page">
-    <section class="prvi-odeljak">
-      <img class="invert" src="slike/glavnaslika.jpg" alt="leskovac-girl" width="380" height="380">
-      <div class="text">
-        <h2>Biografija</h2>
-        <p>
-        Neki textneki text,nekitext
-        Neki textneki text,nekitext
-        Neki textneki text,nekitext
-        Neki textneki text,nekitext
-        Neki textneki text,nekitext
-        Neki textneki text,nekitext
-       </p>
-     </div>
-    <article id="mojaknjiga">
-      
-      <img  src="slike/knjiga1.jpg" alt="leskovac-girl" width="300" height="300">
-      <h2>My First Book</h2>
-      <p><a href="#der">www.amazon.com</a></p>
-    </article>
-    </section>
-    
+<header>
+  <h1><span class="naslov">Arthist</span><span class="naslov">Author</span></h1>
+</header>
+<section>
+  <div class="biografija">
+    <h2>MIMA &nbsp;ARBID</h2>
+    <p>
+        Kako sam sistematski unisten od idiota.
+        Kako sam sistematski unisten od idiota.
+        Kako sam sistematski unisten od idiota.
+        Kako sam sistematski unisten od idiota.
+        Kako sam sistematski unisten od idiota.
+    </p>
   </div>
+  <div class="image">
+    <img src="slike/portret.png" alt="my portret" width= "380" height="300">
+  </div>
+</section>
+<nav>
+  <ul>
+    <li><a href="blok">Maja</a></li>
+    <li><a href="blok">Maja</a></li>
+    <li><a href="blok">Amazon</a></li>
+    <li><a href="blok">Facebook</a></li>
+  </ul>
+</nav>
+<article>
+  <img src="slike/glavnaslika.jpg" alt="my portret" width= "280" height="200">
+  <img src="slike/knjiga1.jpg" alt="my portret" width= "280" height="200">
+  <img src="slike/primer1.jpg" alt="my portret" width= "280" height="200"> 
+  <img src="slike/slika2.jpg" alt="my portret" width= "280" height="200">
+</article>
 
 </body>
 </html>
