--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 </nav>
 <article>
   <img src="slike/glavnaslika.jpg" alt="my portret" width= "280" height="200">
-  <img src="slike/knjiga1.jpg" alt="my portret" width= "280" height="200">
-  <img src="slike/primer1.jpg" alt="my portret" width= "280" height="200"> 
+  <img src="slike/primer1.jpg" alt="my portret" width= "280" height="200">
+  <img src="slike/slika1.jpg" alt="my portret" width= "280" height="200"> 
   <img src="slike/slika2.jpg" alt="my portret" width= "280" height="200">
 </article>
 
