--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <header>
-  <h1><span class="naslov">Arthist</span><span class="naslov">Author</span></h1>
+  <h1><span class="naslov">Author</span><span class="naslov">Artist</span></h1>
 </header>
 <section>
   <div class="biografija">
@@ -34,17 +34,18 @@
 </section>
 <nav>
   <ul>
-    <li><a href="blok">Maja</a></li>
-    <li><a href="blok">Maja</a></li>
+    <li><a href="blok">Books</a></li>
+    <li><a href="blok">Paintings</a></li>
     <li><a href="blok">Amazon</a></li>
+    <li><a href="blok">Instagram</a></li>
     <li><a href="blok">Facebook</a></li>
   </ul>
 </nav>
 <article>
-  <img src="slike/glavnaslika.jpg" alt="my portret" width= "280" height="200">
-  <img src="slike/primer1.jpg" alt="my portret" width= "280" height="200">
-  <img src="slike/slika1.jpg" alt="my portret" width= "280" height="200"> 
-  <img src="slike/slika2.jpg" alt="my portret" width= "280" height="200">
+  <img src="slike/glavnaslika.jpg" alt="my portret" width= "210" height="170">
+  <img src="slike/primer1.jpg" alt="my portret" width= "210" height="170">
+  <img src="slike/knjiga1.jpg" alt="my portret" width= "210" height="170"> 
+  <img src="slike/slika2.jpg" alt="my portret" width= "210" height="170">
 </article>
 
 </body>
