--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <header>
-  <h1><span class="naslov">Author</span><span class="naslov">Artist</span></h1>
+  <h1><span class="zaglavlje-text">Author</span><span class="zaglavlje-text">Artist</span></h1>
 </header>
 <section>
   <div class="biografija">
@@ -28,7 +28,7 @@
         Kako sam sistematski unisten od idiota.
     </p>
   </div>
-  <div class="image">
+  <div class="portret">
     <img src="slike/portret.png" alt="my portret" width= "380" height="300">
   </div>
 </section>
