update biografija i css

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <div class="biografija">
     <h2>MIMA &nbsp;ARBID</h2>
     <p>
-        Kako sam sistematski unisten od idiota.
-        Kako sam sistematski unisten od idiota.
-        Kako sam sistematski unisten od idiota.
-        Kako sam sistematski unisten od idiota.
+        Kako sam sistematski unisten od idiota. Kako sam sistematski unisten od idiota.
+        Kako sam sistematski unisten od idiota: Kako sam sistematski unisten od idiota.
+        Kako sam sistematski unisten od idiota. Kako sam sistematski unisten od idiota.
+        Kako sam sistematski unisten od idiota.Kako sam sistematski unisten od idiota.
         Kako sam sistematski unisten od idiota.
     </p>
   </div>
