--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
     <li><a href="blok">Books</a></li>
     <li><a href="blok">Paintings</a></li>
     <li><a href="blok">Amazon</a></li>
-    <li><a href="blok">Instagram</a></li>
-    <li><a href="blok">Facebook</a></li>
+    <li><a href="blok">Nesto</a></li>
+    <li><a id="instagram" href="blok">Instagram</a></li>
+    <li><a id="facebook" href="blok">Facebook</a></li>
   </ul>
 </nav>
 <article>
