izbrisana donja slika

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
   </ul>
 </nav>
 <article>
-  <img src="slike/glavnaslika.jpg" alt="my portret" width= "210" height="170">
-  <img src="slike/primer1.jpg" alt="my portret" width= "210" height="170">
-  <img src="slike/knjiga1.jpg" alt="my portret" width= "210" height="170"> 
-  <img src="slike/slika2.jpg" alt="my portret" width= "210" height="170">
+  <img src="slike/glavnaslika.jpg" alt="my portret" width= "200" height="160">
+  <img src="slike/primer1.jpg" alt="my portret" width= "200" height="160">
+  <img src="slike/knjiga1.jpg" alt="my portret" width= "200" height="160"> 
 </article>
-
+<footer>
+  <p>Footer</p>
+</footer>
 </body>
 </html>
