--- a/index.html
+++ b/index.html
@@ -3,52 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <title>Prezentacija knjige</title>
-  <meta name="author" content="Ja">
+  <meta name="author" content="Mima Arbid">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css">
-<style>
-  
-</style>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syncopate">
 </head>
 
 <body>
+  <section class="mima-arbid">
+    <header> 
+      <h3 id="simbol">&#8734;</h3>
+      <h1>Mima Arbid</h1>
+      <p>Artist & writer</p>
+    </header>
+    <ul class="navigation-bar">
+      <li><a href="#about">ABOUT</a></li>
+      <li><a href="#books">BOOKS</a></li>
+      <li><a href="#art">ART</a></li>
+      <li><a href="#contact">CONTACT</a></li>
+    </ul>
+  </section>
+  <aside class="biografija">
+    <img alt="mima-arbid" width="300" height="180" src="slike/portret.png">
+    <div class="biografija-text">
+      <p>MIMA</p>
+      <pre>
+        <span>&#8734;</span>
 
-<header>
-  <h1><span class="zaglavlje-text">Author</span><span class="zaglavlje-text">Artist</span></h1>
-</header>
-<section>
-  <div class="biografija">
-    <h2>MIMA &nbsp;ARBID</h2>
-    <p>
-        Kako sam sistematski unisten od idiota. Kako sam sistematski unisten od idiota.
-        Kako sam sistematski unisten od idiota: Kako sam sistematski unisten od idiota.
-        Kako sam sistematski unisten od idiota. Kako sam sistematski unisten od idiota.
-        Kako sam sistematski unisten od idiota.Kako sam sistematski unisten od idiota.
-        Kako sam sistematski unisten od idiota.
-    </p>
-  </div>
-  <div class="portret">
-    <img src="slike/portret.png" alt="my portret" width= "380" height="300">
-  </div>
-</section>
-<nav>
-  <ul>
-    <li><a href="blok">Books</a></li>
-    <li><a href="blok">Paintings</a></li>
-    <li><a href="blok">Amazon</a></li>
-    <li><a href="blok">Nesto</a></li>
-    <li><a id="instagram" href="blok">Instagram</a></li>
-    <li><a id="facebook" href="blok">Facebook</a></li>
-  </ul>
-</nav>
-<article>
-  <img src="slike/glavnaslika.jpg" alt="my portret" width= "200" height="160">
-  <img src="slike/primer1.jpg" alt="my portret" width= "200" height="160">
-  <img src="slike/knjiga1.jpg" alt="my portret" width= "200" height="160"> 
-</article>
-<footer>
-  <p>Footer</p>
-</footer>
+        Mima Arbid moved from former Yugoslavia as a young adult
+        after completing her degree in English and Literature from the
+        University of Belgrade.
+
+        She traveled the world embracing different culture.
+
+        Mima is a mother, wife, artist and writer.
+
+        <span>&#8734;</span>
+       
+      </pre>
+     
+    </div>
+  </aside>
+  <article>
+    <div></div>
+    <div></div>
+  </article>
 </body>
 </html>
