update article css

--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@
      
     </div>
   </aside>
-  <article>
-    <div></div>
-    <div></div>
+  <article class="mima-art">
+   
+      <img src="slike/art1.jpg" alt="art">
+      <p id="palm"><i>Palm trees, acrylie on canvas, 2004</i></p>
+   
+   
   </article>
 </body>
 </html>
