--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "sr-RS">
 <head>
   <meta charset="UTF-8">
-  <title>Prezentacija knjige</title>
+  <title>Mima Arbid</title>
   <meta name="author" content="Mima Arbid">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" defer></script>
@@ -46,11 +46,12 @@
     </div>
   </aside>
   <article class="mima-art">
-   
-      <img src="slike/art1.jpg" alt="art">
-      <p id="palm"><i>Palm trees, acrylie on canvas, 2004</i></p>
-   
-   
+    <img src="slike/art1.jpg" alt="art">
+    <p id="palm"><i>Palm trees, acrylie on canvas, 2004</i></p>
+    <div class="art-blok">
+      <img id="palm2" src="slike/art23.jpg" width="300" height="376" alt="art">
+      <img id="palm3" src="slike/art33.jpg" width="500" height="380" alt="art">
+    </div>
   </article>
 </body>
 </html>
