--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body>
   <section class="mima-arbid">
     <header> 
-      <h3 id="simbol">&#8734;</h3>
-      <h1>Mima Arbid</h1>
+     <h1>Mima Arbid</h1>
       <p>Artist & writer</p>
     </header>
     <ul class="navigation-bar">
@@ -26,33 +25,30 @@
     </ul>
   </section>
   <aside class="biografija">
-    <img alt="mima-arbid" width="300" height="180" src="slike/portret.png">
+    <img alt="mima-arbid" width="400" height="299" src="slike/portret.png">
     <div class="biografija-text">
-      <p>MIMA</p>
+      <!-- <p>Mima</p>-->  
       <pre>
-        <span>&#8734;</span>
+<span>a</span>
 
-        Mima Arbid moved from former Yugoslavia as a young adult
-        after completing her degree in English and Literature from the
-        University of Belgrade.
+Do you believe in destiny? Do you think that everything happens for a 
+reason? Do you ever have that feeling of not belonging?
+My book I DO NOT BELONG is a story of a young girl desperately trying to 
+find herself and her place in the world after a tragic event in her life. 
+A chance encounter with an elderly American couple and a misunderstanding 
+on their part changes her life forever.
+She is catapulted into a new world searching for her destiny. Will she ever 
+find it? It's a relatable story inspired by true events. An easy and fast read. 
+You can find it on Amazon in paperback or kindle. And all the art
+throughout the book, including the cover, is mine.
+Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta
+gram or Facebook. Until we meet again! 
 
-        She traveled the world embracing different culture.
-
-        Mima is a mother, wife, artist and writer.
-
-        <span>&#8734;</span>
-       
-      </pre>
+<span>b</span>
+</pre>
      
     </div>
   </aside>
-  <article class="mima-art">
-    <img src="slike/art1.jpg" alt="art">
-    <p id="palm"><i>Palm trees, acrylie on canvas, 2004</i></p>
-    <div class="art-blok">
-      <img id="palm2" src="slike/art23.jpg" width="300" height="376" alt="art">
-      <img id="palm3" src="slike/art33.jpg" width="500" height="380" alt="art">
-    </div>
-  </article>
+ 
 </body>
 </html>
