--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syncopate">
-  
+  <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/marion">
+                
 </head>
 
 <body>
@@ -46,9 +47,8 @@ gram or Facebook. Until we meet again!
 
 <span>b</span>
 </pre>
-     
-    </div>
-  </aside>
- 
+</div>
+</aside>
+ <p>Kara</p>
 </body>
 </html>
