--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang = "sr-RS">
+<html lang = "en-US">
 <head>
   <meta charset="UTF-8">
   <title>Mima Arbid</title>
   <meta name="author" content="Mima Arbid">
+ 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css">
@@ -49,6 +50,35 @@ gram or Facebook. Until we meet again!
 </pre>
 </div>
 </aside>
- <p>Kara</p>
+<article class="art-blok1">
+  <img id="četkice" src="slike/cetkice.jpg" alt="brush" width="800" height="738" />
+  <div class="palme">
+    <img src="slike/art1.jpg" alt="palme" width="1300" height="990"/>
+    <p>Palm trees, acrylic on canvas, 2014</p>
+  </div>
+</article>
+<article class="art-blok2">
+  <div class="palme2">
+    <img src="slike/art2.jpg" alt="palme" width="370" height="464" />
+    <p>Palm trees, acrylic on canvas, 2014</p>
+  </div>
+  <div class="palme3">
+    <img src="slike/art3.jpg" alt="palme" width="622" height="464" />
+    <p>Palm trees, acrylic on canvas, 2014</p>
+  </div>
+</article>
+  <pre  class="about">
+    This is a place for a qoute about paintings moved from former as a young adult
+    after completing her degree in English and Literature from the
+    University of Belgrade.
+  </pre>
+ <article class="planina">
+   <div>
+     <img src="slike/planine.jpg" alt="mountin" width="1100" height="793"/>
+     <p>Palm trees, acrylic on canvas, 2014</p>
+   </div>
+ </article>
+
+
 </body>
 </html>
