--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang = "en-US">
+<html lang = "en-us">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Mima Arbid</title>
   <meta name="author" content="Mima Arbid">
- 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="mima, arbid, author" />
+  <meta name="description" content="Mima Arbid, Artist & writer" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="knjiga.js" defer></script>
-  <link rel="stylesheet" href="knjiga.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syncopate">
-  <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/marion">
+  <link rel="stylesheet" href="knjiga.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syncopate" />
+  <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/marion" />
                 
 </head>
 
@@ -77,8 +78,37 @@ gram or Facebook. Until we meet again!
      <img src="slike/planine.jpg" alt="mountin" width="1100" height="793"/>
      <p>Palm trees, acrylic on canvas, 2014</p>
    </div>
- </article>
-
-
+   <pre  class="about2">
+    This is a place for a qoute about paintings moved from former as a young adult
+    after completing her degree in English and Literature from the
+    University of Belgrade.
+  </pre>
+</article>
+<article class="mima-personal">
+  <img src="slike/mimaarbid.jpg" width="420" height="421" alt="mimina slika">
+  <img src="slike/penkalo.jpg" width="370" height="246" alt="penkalo"/>
+</article>
+<div class="mima-text">
+  <pre>
+  "She seemed completely oblivious to all the beaty around her. Her mind was
+  back where it all began all those years ago. She seemed completely oblivious
+  to all the beaty around her. Her mind was back where it all began all those 
+  years ago. She seemed completely oblivious to all the beaty around her. Her 
+  mind was back where it all began all those years ago. She seemed completely
+  oblivious to all the beaty around her. Her mind was back where it all began
+  all those years ago."
+   </pre>
+   <p id="mima">Mima</p>
+  </div> 
+<footer>
+  <p id="just-mima">Mima Arbid</p>
+  <p id="pismo">*</p>
+  <div class="contact">
+    <p>Contact:</p>
+    <p>email</p>
+  </div>
+  <p id="facebook">ⓕ</p>
+  <p>Back to top</p>
+</footer>
 </body>
 </html>
