--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syncopate" />
-  <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/marion" />
-                
 </head>
 
 <body>
@@ -69,9 +67,9 @@ gram or Facebook. Until we meet again!
   </div>
 </article>
   <pre  class="about">
-    This is a place for a qoute about paintings moved from former as a young adult
+    <q>This is a place for a qoute about paintings moved from former as a young adult
     after completing her degree in English and Literature from the
-    University of Belgrade.
+    University of Belgrade.</q>
   </pre>
  <article class="planina">
    <div>
@@ -79,9 +77,9 @@ gram or Facebook. Until we meet again!
      <p>Palm trees, acrylic on canvas, 2014</p>
    </div>
    <pre  class="about2">
-    This is a place for a qoute about paintings moved from former as a young adult
+    <q>This is a place for a qoute about paintings moved from former as a young adult
     after completing her degree in English and Literature from the
-    University of Belgrade.
+    University of Belgrade.</q>
   </pre>
 </article>
 <article class="mima-personal">
@@ -105,10 +103,10 @@ gram or Facebook. Until we meet again!
   <p id="pismo">*</p>
   <div class="contact">
     <p>Contact:</p>
-    <p>email</p>
+    <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
-  <p id="facebook">ⓕ</p>
-  <p>Back to top</p>
+  <p id="facebook"><a href="#mima">ⓕ</a></p>
+ 
 </footer>
 </body>
 </html>
