--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <section class="mima-arbid">
+  <section id="M" class="mima-arbid">
     <header> 
      <h1>Mima Arbid</h1>
       <p>Artist & writer</p>
@@ -49,7 +49,7 @@ gram or Facebook. Until we meet again!
 </pre>
 </div>
 </aside>
-<article class="art-blok1">
+<article id="art" class="art-blok1">
   <img id="četkice" src="slike/cetkice.jpg" alt="brush" width="800" height="738" />
   <div class="palme">
     <img src="slike/art1.jpg" alt="palme" width="1300" height="990"/>
@@ -101,12 +101,12 @@ gram or Facebook. Until we meet again!
 <footer>
   <p id="just-mima">Mima Arbid</p>
   <p id="pismo">*</p>
-  <div class="contact">
+  <div id="contact" class="contact">
     <p>Contact:</p>
     <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="#mima">ⓕ</a></p>
- 
+  <p id="top"><a href="#M">Back to Top</a></p>
 </footer>
 </body>
 </html>
