--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 Do you believe in destiny? Do you think that everything happens for a 
 reason? Do you ever have that feeling of not belonging?
 My book I DO NOT BELONG is a story of a young girl desperately trying to 
-find herself and her place in the world after a tragic event in her life. 
-A chance encounter with an elderly American couple and a misunderstanding 
+find herself and her place in the world after a tragic event in her life. A 
+chance encounter with an elderly American couple and a misunderstanding 
 on their part changes her life forever.
 She is catapulted into a new world searching for her destiny. Will she ever 
 find it? It's a relatable story inspired by true events. An easy and fast read. 
