--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <title>Mima Arbid</title>
   <meta name="author" content="Mima Arbid">
   <meta name="keywords" content="mima, arbid, author" />
-  <meta name="description" content="Mima Arbid, Artist & writer" />
+  <meta name="description" content="This is a place for a qoute about paintings moved from former as a young adult
+  after completing her degree in English and Literature from the
+  University of Belgrade." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
@@ -14,10 +16,6 @@
 
 <body>
   <section id="M" class="mima-arbid">
-    <header> 
-     <h1>Mima Arbid</h1>
-      <p>Artist & writer</p>
-    </header>
     <ul class="navigation-bar">
       <li><a href="#about">ABOUT</a></li>
       <li><a href="#books">BOOKS</a></li>
