Unošenje slika u png formatu

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </ul>
   </section>
   <aside class="biografija">
-    <img alt="mima-arbid" width="400" height="299" src="slike/portret.png">
+    <img alt="mima-arbid" width="400" height="299" src="slike/bw.png">
     <div class="biografija-text">
       <!-- <p>Mima</p>-->  
       <pre>
@@ -46,9 +46,9 @@ gram or Facebook. Until we meet again!
 </div>
 </aside>
 <article id="art" class="art-blok1">
-  <img id="četkice" src="slike/cetkice.jpg" alt="brush" width="800" height="738" />
+  <img id="četkice" src="slike/mima6.png" alt="brush" width="800" height="738" />
   <div class="palme">
-    <img src="slike/art1.jpg" alt="palme" width="1300" height="990"/>
+    <img src="slike/mima4.png" alt="palme" width="1300" height="990"/>
     <p>Palm trees, acrylic on canvas, 2014</p>
   </div>
 </article>
@@ -69,7 +69,7 @@ gram or Facebook. Until we meet again!
   </pre>
  <article class="planina">
    <div>
-     <img src="slike/planine.jpg" alt="mountin" width="1100" height="793"/>
+     <img src="slike/mima3.png" alt="mountin" width="1100" height="793"/>
      <p>Palm trees, acrylic on canvas, 2014</p>
    </div>
    <pre  class="about2">
@@ -79,8 +79,8 @@ gram or Facebook. Until we meet again!
   </pre>
 </article>
 <article class="mima-personal">
-  <img src="slike/mimaarbid.jpg" width="420" height="421" alt="mimina slika">
-  <img src="slike/penkalo.jpg" width="370" height="246" alt="penkalo"/>
+  <img src="slike/mima2.png" width="420" height="421" alt="mimina slika">
+  <img src="slike/mima7.png" width="370" height="246" alt="penkalo"/>
 </article>
 <div class="mima-text">
   <pre>
@@ -102,7 +102,7 @@ gram or Facebook. Until we meet again!
     <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="#mima">ⓕ</a></p>
-  <p id="top"><a href="#M">Back to Top</a></p>
+  <p id="top"><a href="#M">back to top</a></p>
 </footer>
 </body>
 </html>
