--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ gram or Facebook. Until we meet again!
 </article>
 <article class="art-blok2">
   <div class="palme2">
-    <img src="slike/art2.jpg" alt="palme" width="370" height="464" />
+    <img src="slike/mima1.png" alt="palme" width="370" height="464" />
     <p>Palm trees, acrylic on canvas, 2014</p>
   </div>
   <div class="palme3">
-    <img src="slike/art3.jpg" alt="palme" width="622" height="464" />
+    <img src="slike/mima5.jpg" alt="palme" width="622" height="464" />
     <p>Palm trees, acrylic on canvas, 2014</p>
   </div>
 </article>
