--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ find herself and her place in the world after a tragic event in her life. A
 chance encounter with an elderly American couple and a misunderstanding 
 on their part changes her life forever.
 She is catapulted into a new world searching for her destiny. Will she ever 
-find it? It's a relatable story inspired by true events. An easy and fast read. 
+  find it? It's a relatable story inspired by true events. An easy and fast read. 
 You can find it on Amazon in paperback or kindle. And all the art
 throughout the book, including the cover, is mine.
 Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta
@@ -79,7 +79,7 @@ gram or Facebook. Until we meet again!
   </pre>
 </article>
 <article class="mima-personal">
-  <img src="slike/mima2.png" width="420" height="421" alt="mimina slika">
+  <img src="slike/mima2.png" width="380" height="376" alt="mimina slika">
   <img src="slike/mima7.png" width="370" height="246" alt="penkalo"/>
 </article>
 <div class="mima-text">
@@ -94,6 +94,7 @@ gram or Facebook. Until we meet again!
    </pre>
    <p id="mima">Mima</p>
   </div> 
+  <p id="top"><a href="#M">Back to top..</a></p>
 <footer>
   <p id="just-mima">Mima Arbid</p>
   <p id="pismo">*</p>
@@ -102,7 +103,7 @@ gram or Facebook. Until we meet again!
     <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="#mima">ⓕ</a></p>
-  <p id="top"><a href="#M">back to top</a></p>
+  
 </footer>
 </body>
 </html>
