--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang = "en-us">
+<html lang = "en-USA">
 <head>
   <meta charset="UTF-8" />
   <title>Mima Arbid</title>
   <meta name="author" content="Mima Arbid">
-  <meta name="keywords" content="mima, arbid, author" />
+  <meta name="keywords" content="mima, arbid, author">
   <meta name="description" content="This is a place for a qoute about paintings moved from former as a young adult
   after completing her degree in English and Literature from the
   University of Belgrade." />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syncopate" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syncopate">
 </head>
 
 <body>
@@ -84,17 +84,17 @@ gram or Facebook. Until we meet again!
 </article>
 <div class="mima-text">
   <pre>
-  "She seemed completely oblivious to all the beaty around her. Her mind was
-  back where it all began all those years ago. She seemed completely oblivious
-  to all the beaty around her. Her mind was back where it all began all those 
-  years ago. She seemed completely oblivious to all the beaty around her. Her 
-  mind was back where it all began all those years ago. She seemed completely
-  oblivious to all the beaty around her. Her mind was back where it all began
+  "She seemed completely oblivious to all the beaty around her. Her mind 
+  was back where it all began all those years ago. She seemed completely 
+  oblivious to all the beaty around her. Her mind was back where it all 
+  began all those years ago. She seemed completely oblivious to all the 
+  beaty around her. Her mind was back where it all began all those years 
+  ago. She seemed completely oblivious to all the beaty around her. 
+  Her mind was back where it all began
   all those years ago."
    </pre>
    <p id="mima">Mima</p>
   </div> 
-  <p id="top"><a href="#M">Back to top..</a></p>
 <footer>
   <p id="just-mima">Mima Arbid</p>
   <p id="pismo">*</p>
@@ -103,7 +103,7 @@ gram or Facebook. Until we meet again!
     <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="#mima">ⓕ</a></p>
-  
 </footer>
+<p id="top"><a href="#M">Back to top..</a></p>
 </body>
 </html>
