--- a/index.html
+++ b/index.html
@@ -15,35 +15,20 @@
 </head>
 
 <body>
-  <section id="M" class="mima-arbid">
-    <ul class="navigation-bar">
-      <li><a href="#about">ABOUT</a></li>
-      <li><a href="#books">BOOKS</a></li>
-      <li><a href="#art">ART</a></li>
-      <li><a href="#contact">CONTACT</a></li>
-    </ul>
-  </section>
-  <aside class="biografija">
-    <img alt="mima-arbid" width="400" height="299" src="slike/bw.png">
-    <div class="biografija-text">
+
+<section id="M" class="mima-arbid">
+  <ul class="navigation-bar">
+    <li><a href="#about">ABOUT</a></li>
+    <li><a href="#books">BOOKS</a></li>
+    <li><a href="#art">ART</a></li>
+    <li><a href="#contact">CONTACT</a></li>
+  </ul>
+</section>
+<aside class="biografija">
+  <img alt="mima-arbid" width="400" height="299" src="slike/bw.png">
+  <div class="biografija-text mobilni">
       <!-- <p>Mima</p>-->  
-      <pre>
-<span>a</span>
-Do you believe in destiny? Do you think that everything happens for a 
-reason? Do you ever have that feeling of not belonging?
-My book I DO NOT BELONG is a story of a young girl desperately trying to 
-find herself and her place in the world after a tragic event in her life. A 
-chance encounter with an elderly American couple and a misunderstanding 
-on their part changes her life forever.
-She is catapulted into a new world searching for her destiny. Will she ever 
-  find it? It's a relatable story inspired by true events. An easy and fast read. 
-You can find it on Amazon in paperback or kindle. And all the art
-throughout the book, including the cover, is mine.
-Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta
-gram or Facebook. Until we meet again! 
-<span>b</span>
-</pre>
-</div>
+  </div>
 </aside>
 <article id="art" class="art-blok1">
   <img id="četkice" src="slike/mima6.png" alt="brush" width="800" height="738" />
