--- a/index.html
+++ b/index.html
@@ -26,20 +26,23 @@
 </section>
 <aside class="biografija">
   <img alt="mima-arbid" width="400" height="299" src="slike/bw.png">
-  <div class="biografija-text mobilni">
-    Do you believe in destiny? Do you think that everything happens for a 
-    reason? Do you ever have that feeling of not belonging?
-    My book I DO NOT BELONG is a story of a young girl desperately trying to 
-    find herself and her place in the world after a tragic event in her life. A 
-    chance encounter with an elderly American couple and a misunderstanding 
-    on their part changes her life forever. <hr>
-    She is catapulted into a new world searching for her destiny. Will she ever 
-    find it? It's a relatable story inspired by true events. An easy and fast read. 
-    You can find it on Amazon in paperback or kindle. And all the art
-    throughout the book, including the cover, is mine.
-    Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta
-    gram or Facebook. Until we meet again! 
-    
+  <div class="biografija-text">
+    <pre>
+      <span>a</span>
+      Do you believe in destiny? Do you think that everything happens for a 
+      reason? Do you ever have that feeling of not belonging?
+      My book I DO NOT BELONG is a story of a young girl desperately trying to 
+      find herself and her place in the world after a tragic event in her life. A 
+      chance encounter with an elderly American couple and a misunderstanding 
+      on their part changes her life forever.
+      She is catapulted into a new world searching for her destiny. Will she ever 
+        find it? It's a relatable story inspired by true events. An easy and fast read. 
+      You can find it on Amazon in paperback or kindle. And all the art
+      throughout the book, including the cover, is mine.
+      Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta
+      gram or Facebook. Until we meet again! 
+      <span>b</span>
+    </pre>
   </div>
 </aside>
 <article id="art" class="art-blok1">
