--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syncopate">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sophia">
 </head>
 
 <body>
@@ -29,18 +29,18 @@
   <div class="biografija-text">
     <pre>
       <span>a</span>
-      Do you believe in destiny? Do you think that everything happens for a 
-      reason? Do you ever have that feeling of not belonging?
-      My book I DO NOT BELONG is a story of a young girl desperately trying to 
-      find herself and her place in the world after a tragic event in her life. A 
-      chance encounter with an elderly American couple and a misunderstanding 
-      on their part changes her life forever.
-      She is catapulted into a new world searching for her destiny. Will she ever 
-        find it? It's a relatable story inspired by true events. An easy and fast read. 
-      You can find it on Amazon in paperback or kindle. And all the art
-      throughout the book, including the cover, is mine.
-      Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta
-      gram or Facebook. Until we meet again! 
+    Do you believe in destiny? Do you think that everything happens for a 
+    reason? Do you ever have that feeling of not belonging?
+    My book I DO NOT BELONG is a story of a young girl desperately trying to 
+    find herself and her place in the world after a tragic event in her life. A 
+    chance encounter with an elderly American couple and a misunderstanding 
+    on their part changes her life forever.
+    She is catapulted into a new world searching for her destiny. Will she ever 
+      find it? It's a relatable story inspired by true events. An easy and fast read. 
+    You can find it on Amazon in paperback or kindle. And all the art
+    throughout the book, including the cover, is mine.
+    Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta
+    gram or Facebook. Until we meet again! 
       <span>b</span>
     </pre>
   </div>
