--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang = "en-USA">
+<html lang = "en-US">
 <head>
   <meta charset="UTF-8" />
   <title>Mima Arbid</title>
   <meta name="author" content="Mima Arbid">
   <meta name="keywords" content="mima, arbid, author">
   <meta name="description" content="This is a place for a qoute about paintings moved from former as a young adult
-  after completing her degree in English and Literature from the
-  University of Belgrade." />
+  after completing her degree in English and Literature from the University of Belgrade.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sophia">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
 
 <body>
@@ -62,27 +61,31 @@
     <p>Palm trees, acrylic on canvas, 2014</p>
   </div>
 </article>
-  <pre  class="about">
+<aside class="about">
+  <pre>
     <q>This is a place for a qoute about paintings moved from former as a young adult
-    after completing her degree in English and Literature from the
-    University of Belgrade.</q>
+  after completing her degree in English and Literature from the
+  University of Belgrade.</q>
   </pre>
+</aside>
  <article class="planina">
    <div>
      <img src="slike/mima3.png" alt="mountin" width="1100" height="793"/>
      <p>Palm trees, acrylic on canvas, 2014</p>
    </div>
-   <pre  class="about2">
+  <aside class="about2">
+   <pre>
     <q>This is a place for a qoute about paintings moved from former as a young adult
     after completing her degree in English and Literature from the
     University of Belgrade.</q>
   </pre>
+</aside>
 </article>
 <article class="mima-personal">
   <img src="slike/mima2.png" width="380" height="376" alt="mimina slika">
   <img src="slike/mima7.png" width="370" height="246" alt="penkalo"/>
 </article>
-<div class="mima-text">
+<aside class="mima-text">
   <pre>
   "She seemed completely oblivious to all the beaty around her. Her mind 
   was back where it all began all those years ago. She seemed completely 
@@ -94,7 +97,7 @@
   all those years ago."
    </pre>
    <p id="mima">Mima</p>
-  </div> 
+  </aside> 
 <footer>
   <p id="just-mima">Mima Arbid</p>
   <p id="pismo">&#9993;</p>
@@ -103,7 +106,7 @@
     <p><a href="mailto: mima.arbid@gmail.com">mima.arbid@gmail.com</a></p>
   </div>
   <p id="facebook"><a href="#mima">ⓕ</a></p>
-  <p id="top"><a href="#M">Back to top..</a></p>
+  <p id="top"><i><a href="#M">Back to top..</a></i></p>
 </footer>
 
 </body>
