--- a/index.html
+++ b/index.html
@@ -27,24 +27,28 @@
   <img alt="mima-arbid" width="400" height="299" src="slike/bw.png">
   <div class="biografija-text">
     <pre>
-      <span>a</span>
+      <span>&#x0064;</span>
     Do you believe in destiny? Do you think that everything happens for a 
     reason? Do you ever have that feeling of not belonging?
-    My book I DO NOT BELONG is a story of a young girl desperately trying to 
-    find herself and her place in the world after a tragic event in her life. A 
+    My book<a href="#link">I DO NOT BELONG</a>.pis a story of a young girl desperately trying to 
+      find herself and her place in the world after a tragic event in her life. A 
     chance encounter with an elderly American couple and a misunderstanding 
     on their part changes her life forever.
     She is catapulted into a new world searching for her destiny. Will she ever 
-      find it? It's a relatable story inspired by true events. An easy and fast read. 
+    find it? It's a relatable story inspired by true events. An easy and fast read. 
     You can find it on Amazon in paperback or kindle. And all the art
     throughout the book, including the cover, is mine.
     Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta
     gram or Facebook. Until we meet again! 
-      <span>b</span>
+      <span>&#98;</span>
     </pre>
   </div>
 </aside>
-<article id="art" class="art-blok1">
+
+<header id="art" class="naslov">
+  <h1>Mima's arts</h1>
+</header>
+<article class="art-blok1">
   <img id="četkice" src="slike/mima6.png" alt="brush" width="800" height="738" />
   <div class="palme">
     <img src="slike/mima4.png" alt="palme" width="1300" height="990"/>
@@ -68,18 +72,18 @@
   University of Belgrade.</q>
   </pre>
 </aside>
- <article class="planina">
+<article class="planina">
    <div>
      <img src="slike/mima3.png" alt="mountin" width="1100" height="793"/>
      <p>Palm trees, acrylic on canvas, 2014</p>
    </div>
   <aside class="about2">
-   <pre>
-    <q>This is a place for a qoute about paintings moved from former as a young adult
-    after completing her degree in English and Literature from the
-    University of Belgrade.</q>
-  </pre>
-</aside>
+    <pre>
+      <q>This is a place for a qoute about paintings moved from former as a young adult
+      after completing her degree in English and Literature from the
+      University of Belgrade.</q>
+    </pre>
+  </aside>
 </article>
 <article class="mima-personal">
   <img src="slike/mima2.png" width="380" height="376" alt="mimina slika">
