--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <title>Mima Arbid</title>
   <meta name="author" content="Mima Arbid">
-  <meta name="keywords" content="mima, arbid, author">
-  <meta name="description" content="This is a place for a qoute about paintings moved from former as a young adult
-  after completing her degree in English and Literature from the University of Belgrade.">
+  <meta name="keywords" content="mima, arbid, author, writer, book">
+  <meta name="description" content="Mima Arbid is a artist & writer">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
@@ -27,7 +26,7 @@
   <img alt="mima-arbid" width="400" height="299" src="slike/bw.png">
   <div class="biografija-text">
     <pre>
-      <span>&#x0064;</span>
+      <span>&#99;</span>
     Do you believe in destiny? Do you think that everything happens for a 
     reason? Do you ever have that feeling of not belonging?
     My book<a href="#link">I DO NOT BELONG</a>.pis a story of a young girl desperately trying to 
