update font marion

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mima Arbid</title>
   <meta name="author" content="Mima Arbid">
   <meta name="keywords" content="mima, arbid, author, writer, book">
-  <meta name="description" content="Mima Arbid is a artist & writer">
+  <meta name="description" content="Mima Arbid is a artist and writer">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
@@ -43,10 +43,6 @@
     </pre>
   </div>
 </aside>
-
-<header id="art" class="naslov">
-  <h1>Mima's arts</h1>
-</header>
 <article class="art-blok1">
   <img id="četkice" src="slike/mima6.png" alt="brush" width="800" height="738" />
   <div class="palme">
