--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="knjiga.js" defer></script>
   <link rel="stylesheet" href="knjiga.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
 
 <body>
@@ -29,7 +28,7 @@
       <span>&#99;</span>
     Do you believe in destiny? Do you think that everything happens for a 
     reason? Do you ever have that feeling of not belonging?
-    My book<a href="#link">I DO NOT BELONG</a>.pis a story of a young girl desperately trying to 
+    My book <a href="#books">I DO NOT BELONG</a> is a story of a young girl desperately trying to 
       find herself and her place in the world after a tragic event in her life. A 
     chance encounter with an elderly American couple and a misunderstanding 
     on their part changes her life forever.
