update text - biografija

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Mima Arbid</title>
+  <link rel="icon" type="image/x-icon" href="slike/favicon.ico">
   <meta name="author" content="Mima Arbid">
   <meta name="keywords" content="mima, arbid, author, writer, book">
   <meta name="description" content="Mima Arbid is a artist and writer">
@@ -24,22 +25,20 @@
 <aside class="biografija">
   <img alt="mima-arbid" width="400" height="299" src="slike/bw.png">
   <div class="biografija-text">
-    <pre>
-      <span>&#99;</span>
-    Do you believe in destiny? Do you think that everything happens for a 
-    reason? Do you ever have that feeling of not belonging?
-    My book <a href="#books">I DO NOT BELONG</a> is a story of a young girl desperately trying to 
-      find herself and her place in the world after a tragic event in her life. A 
-    chance encounter with an elderly American couple and a misunderstanding 
-    on their part changes her life forever.
+    <pre><span>&#99;</span>
+       Do you believe in destiny? Do you think that everything happens for a 
+          reason? Do you ever have that feeling of not belonging?
+      My book <a href="#books">I DO NOT BELONG</a> is a story of a young girl desperately trying to 
+     find herself and her place in the world after a tragic event in her life. A 
+     chance encounter with an elderly American couple and a misunderstanding 
+   on their part changes her life forever.
     She is catapulted into a new world searching for her destiny. Will she ever 
     find it? It's a relatable story inspired by true events. An easy and fast read. 
     You can find it on Amazon in paperback or kindle. And all the art
     throughout the book, including the cover, is mine.
-    Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta
-    gram or Facebook. Until we meet again! 
-      <span>&#98;</span>
-    </pre>
+    Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta-
+     gram or Facebook. Until we meet again! 
+    <span>&#98;</span></pre>
   </div>
 </aside>
 <article class="art-blok1">
