--- a/index.html
+++ b/index.html
@@ -25,20 +25,22 @@
 <aside class="biografija">
   <img alt="mima-arbid" width="400" height="299" src="slike/bw.png">
   <div class="biografija-text">
-    <pre><span>&#99;</span>
-       Do you believe in destiny? Do you think that everything happens for a 
-          reason? Do you ever have that feeling of not belonging?
-      My book <a href="#books">I DO NOT BELONG</a> is a story of a young girl desperately trying to 
+    <p id="a">a</p>
+    <pre>
+     Do you believe in destiny? Do you think that everything happens for a 
+     reason? Do you ever have that feeling of not belonging?
+     My book <a href="#books">I DO NOT BELONG</a> is a story of a young girl desperately trying to 
      find herself and her place in the world after a tragic event in her life. A 
      chance encounter with an elderly American couple and a misunderstanding 
-   on their part changes her life forever.
-    She is catapulted into a new world searching for her destiny. Will she ever 
-    find it? It's a relatable story inspired by true events. An easy and fast read. 
-    You can find it on Amazon in paperback or kindle. And all the art
-    throughout the book, including the cover, is mine.
-    Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta-
+     on their part changes her life forever.
+     She is catapulted into a new world searching for her destiny. Will she ever 
+     find it? It's a relatable story inspired by true events. An easy and fast read. 
+     You can find it on Amazon in paperback or kindle. And all the art
+     throughout the book, including the cover, is mine.
+     Hope you enjoy reading it. Please let me know. On Amazon, tweeter, Insta-
      gram or Facebook. Until we meet again! 
-    <span>&#98;</span></pre>
+    </pre>
+    <p id="b">b</p>
   </div>
 </aside>
 <article class="art-blok1">
@@ -73,8 +75,7 @@
   <aside class="about2">
     <pre>
       <q>This is a place for a qoute about paintings moved from former as a young adult
-      after completing her degree in English and Literature from the
-      University of Belgrade.</q>
+      after completing her degree in English and Literature from the.</q>
     </pre>
   </aside>
 </article>
