update Mima text

--- a/index.html
+++ b/index.html
@@ -85,14 +85,13 @@
 </article>
 <aside class="mima-text">
   <pre>
-  "She seemed completely oblivious to all the beaty around her. Her mind 
-  was back where it all began all those years ago. She seemed completely 
-  oblivious to all the beaty around her. Her mind was back where it all 
-  began all those years ago. She seemed completely oblivious to all the 
-  beaty around her. Her mind was back where it all began all those years 
-  ago. She seemed completely oblivious to all the beaty around her. 
-  Her mind was back where it all began
-  all those years ago."
+  "She seemed completely oblivious to all the beaty around her. Her mind was 
+  back where it all began all those years ago. She seemed completely oblivious to 
+  all the beaty around her. Her mind was back where it all began all those years 
+  ago. She seemed completely oblivious to all the beaty around her. Her mind
+  was back where it all began all those years ago. She seemed completely oblivious
+  to all the beaty around her. Her mind was back where it all beganall those 
+  years ago."
    </pre>
    <p id="mima">Mima</p>
   </aside> 
